[project]
name = "example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "torch==2.2",
    "tts>=0.22.0",
    "numpy==1.26.4",
    "transformers==4.33.0",
    "sounddevice>=0.5.2",
    "gradio>=6.3.0",
    "speechbrain==1.0.3",
    "kokoro==0.9.4",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121" },
]
torchvision = [
  { index = "pytorch-cu121" },
]
torchaudio = [
  { index = "pytorch-cu121" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
